--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,12 @@
 [submodule "vim/.vim/bundle/supertab"]
 	path = vim/.vim/bundle/supertab
 	url = https://github.com/ervandew/supertab.git
-[submodule "zsh/.oh-my-zsh/custom/plugins/zsh-vi-mode"]
-	path = zsh/.oh-my-zsh/custom/plugins/zsh-vi-mode
+[submodule "zsh/.zsh/plugins/zsh-vi-mode"]
+	path = zsh/.zsh/plugins/zsh-vi-mode
 	url = https://github.com/jeffreytse/zsh-vi-mode
-[submodule "zsh/.oh-my-zsh/custom/plugins/zsh-autosuggestions"]
-	path = zsh/.oh-my-zsh/custom/plugins/zsh-autosuggestions
+[submodule "zsh/.zsh/plugins/zsh-autosuggestions"]
+	path = zsh/.zsh/plugins/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
-[submodule "zsh/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting"]
-	path = zsh/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+[submodule "zsh/.zsh/plugins/zsh-syntax-highlighting"]
+	path = zsh/.zsh/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
