--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,5 +3,5 @@ set -g mode-keys vi
 set -g status-keys vi
 set -g escape-time 0
 unbind C-b
-set-option -g prefix C-\\
-bind-key C-\\ send-prefix
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
