--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -60,22 +60,8 @@ bindsym $mod+n exec urxvt256c
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-#bindsym $mod+d exec --no-startup-id dmenu_run \
-#    -l 5 \
-#    -fn 'terminus-12' \
-#    -nb '#081011' \
-#    -nf '#feffff' \
-#    -sb '#fa7518' \
-#    -sf '#293033'
-
-bindsym $mod+d exec --no-startup-id rofi -show run
-
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+# run command
+bindsym $mod+space exec --no-startup-id rofi -show run
 
 # change focus
 bindsym $mod+h focus left
@@ -107,7 +93,7 @@ bindsym $mod+s layout toggle splitv stacking
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $mod+Tab focus mode_toggle
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
