--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,3 +5,14 @@ set -g escape-time 0
 unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
+
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'niksingh710/minimal-tmux-status'
+
+set-option -g status-position "top"
+set-option -g status-style "bg=#293033,fg=#c0ccdc"
+set-option -g status-justify "left"
+set-option -g status-left "#[bg=#77faff,fg=black] #S #[bg=default,fg=default] "
+set-option -g status-right "#{?client_prefix, ,}#[bg=#fa7518,fg=black]#{?client_prefix, ? ,}#[bg=default,fg=default] #[bg=#af87d7,fg=black] #h #[bg=default,fg=default]"
+set-option -g window-status-format " #I:#W "
+set-option -g window-status-current-format "#[bg=#44eb58,fg=black] #I:#W #{?window_zoomed_flag,+ ,}"
