Minor theme adjustments

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,7 +12,7 @@ bind-key C-Space send-prefix
 set-option -g status-position "top"
 set-option -g status-style "bg=#293033,fg=#c0ccdc"
 set-option -g status-justify "left"
-set-option -g status-left "#[bg=#77faff,fg=black] #S #[bg=default,fg=default] "
-set-option -g status-right "#{?client_prefix, ,}#[bg=#fa7518,fg=black]#{?client_prefix, ? ,}#[bg=default,fg=default] #[bg=#af87d7,fg=black] #h #[bg=default,fg=default]"
+set-option -g status-left "#[bg=#fa7518,fg=black]#{?client_prefix, ? ,}#[bg=default,fg=default]#[bg=#77faff,fg=black]#{?client_prefix,, #S }#[bg=default,fg=default] "
+set-option -g status-right "#[bg=#af87d7,fg=black] #h #[bg=default,fg=default]"
 set-option -g window-status-format " #I:#W "
 set-option -g window-status-current-format "#[bg=#44eb58,fg=black] #I:#W #{?window_zoomed_flag,+ ,}"
