--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -211,11 +211,13 @@ bar {
 
 title_align center
 for_window [all] title_window_icon on
+for_window [all] border pixel 2
 for_window [all] title_window_icon padding 10
 for_window [all] title_format "%class :: %title"
 
-for_window [class="^feh$"] floating enable, fullscreen enable
+for_window [class="^feh$"] floating enable
 for_window [class="^firefox$"] border pixel 2
 for_window [class="^mpv$"] floating enable
+for_window [class="^ffplay$"] floating enable
 
 workspace_layout stacking
